--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,7 @@
-version: "3.1"
+version: "3.9"
 services:
-    db:
-        image: mysql
-        restart: always
-        ports: 
-            - "3307:3306"
-        command: --default-authentication-plugin=mysql_native_password
-        environment:
-            MYSQL_DATABASE: dbname
-            MYSQL_PASSWORD: test
-            MYSQL_ROOT_PASSWORD: test 
-        volumes:
-            - ./dump:/docker-entrypoint-initdb.d
-            - ./conf:/etc/mysql/conf.d
-            - persistent:/var/lib/mysql
-        networks:
-            - default
-    www:
-        build: .
-        restart: always
-        ports: 
-            - "80:80"
-        links:
-            - db
-        networks:
-            - default
-    phpmyadmin:
-        image: phpmyadmin/phpmyadmin
-        restart: always
-        links: 
-            - db:db
-        ports:
-            - 8000:80
-        environment:
-            MYSQL_USER: root
-            MYSQL_PASSWORD: test
-            MYSQL_ROOT_PASSWORD: test 
-volumes:
-    persistent:
+     libreria:
+          build: .
+          restart: always
+          ports:
+               - "80:80"
