--- a/docker-compose-sql.yml
+++ b/docker-compose-sql.yml
@@ -16,6 +16,14 @@ services:
             - persistent:/var/lib/mysql
         networks:
             - default
+    www:
+        build: .
+        ports: 
+            - "80:80"
+        links:
+            - db:db
+        networks:
+            - default
     phpmyadmin:
         image: phpmyadmin/phpmyadmin
         restart: always
