--- a/docker-compose-sql.yml
+++ b/docker-compose-sql.yml
@@ -20,7 +20,7 @@ services:
         ports:
             - 8080:80
         environment:
-            - PMA_ARBITRARY=1
+            PMA_ARBITRARY: 1
         networks:
             - redTest
     www:
