--- a/docker-compose-sql.yml
+++ b/docker-compose-sql.yml
@@ -5,9 +5,9 @@ services:
     db:
         image: mysql
         environment:
-        MYSQL_ROOT_PASSWORD: test
-        MYSQL_USER: admin
-        MYSQL_PASSWORD: test
+            MYSQL_ROOT_PASSWORD: test
+            MYSQL_USER: admin
+            MYSQL_PASSWORD: test
         ports:
             - 3306:3306
         volumes:
@@ -20,7 +20,7 @@ services:
         ports:
             - 8080:80
         environment:
-            PMA_ARBITRARY: 1
+            - PMA_ARBITRARY=1
         networks:
             - redTest
     www:
