--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: mysql
     environment:
       MYSQL_ROOT_PASSWORD: test
-      MYSQL_USER: root
+      MYSQL_USER: admin
       MYSQL_PASSWORD: test
     ports:
       - 3306:3306
